objects/Class_SFDC_Session_Attendance__c.object
<CustomObject>
    <description>Individual student attendance record for a session</description>
    <fields>
        <fullName>Attended__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Mark student attendance</description>
        <inlineHelpText>Mark student attended</inlineHelpText>
        <label>Attended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Class_Session__c</fullName>
        <description>Session for which attendance of student is tracked</description>
        <label>Class Session</label>
        <referenceTo>Class_SFDC_Session__c</referenceTo>
        <relationshipLabel>Class Session Attendances</relationshipLabel>
        <relationshipName>Class_Session_Attendances</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Student_Friendly_Name__c</fullName>
        <formula>Student_Name__r.FirstName + &apos; &apos; +  Student_Name__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student_Friendly_Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Name of the student for this attendance record</description>
        <inlineHelpText>Enter name of the student / contact</inlineHelpText>
        <label>Student Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>ClassroomStudent</value>
            </filterItems>
            <filterItems>
                <field>Contact.Active_Student__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Class Session Attendances</relationshipLabel>
        <relationshipName>Class_Session_Attendances</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Class Session Attendance</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ATTEND-{00000}</displayFormat>
        <label>Class Session Attendance ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Class Session Attendances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>